fix z-index

--- a/web/assets/styles/includes/header.scss
+++ b/web/assets/styles/includes/header.scss
@@ -133,6 +133,7 @@
     @media (max-width:960px) {
       order: 2;
       transform: translateX(-120px);
+      z-index: 2;
     }
 
     @media (max-width:660px) {
